--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,9 +101,15 @@ input[type="checkbox"] {
   cursor: pointer;
   position: relative;
   transition: all 0.2s ease;
-  -webkit-tap-highlight-color: transparent;
-  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent !important;
+  -webkit-touch-callout: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+  touch-action: manipulation !important;
   vertical-align: middle;
+  outline: none !important;
 }
 
 input[type="checkbox"]:checked {
@@ -134,6 +140,11 @@ input[type="checkbox"]:checked::after {
   input[type="checkbox"] {
     width: 24px;
     height: 24px;
+    -webkit-tap-highlight-color: transparent !important;
+    -webkit-touch-callout: none !important;
+    -webkit-user-select: none !important;
+    touch-action: manipulation !important;
+    outline: none !important;
   }
 
   input[type="checkbox"]:checked::after {
@@ -141,6 +152,39 @@ input[type="checkbox"]:checked::after {
     top: 0px;
     font-size: 20px;
   }
+}
+
+/* === LANDSCAPE ORIENTATION FIXES === */
+@media (orientation: landscape) {
+  input[type="checkbox"] {
+    width: 22px;
+    height: 22px;
+    -webkit-tap-highlight-color: transparent !important;
+    -webkit-touch-callout: none !important;
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+    touch-action: manipulation !important;
+    outline: none !important;
+  }
+  
+  input[type="checkbox"]:active {
+    -webkit-tap-highlight-color: transparent !important;
+    background-color: transparent !important;
+    transform: none !important;
+  }
+  
+  input[type="checkbox"]:focus {
+    -webkit-tap-highlight-color: transparent !important;
+    outline: none !important;
+    box-shadow: none !important;
+  }
+  
+  input[type="checkbox"]:hover {
+    -webkit-tap-highlight-color: transparent !important;
+  }
+}
   
   h1 {
     font-size: clamp(1.5rem, 6vw, 2rem) !important;
